...
        }
    }
    
    func proceedToNextQuestionOrResults() {
        if isLastQuestion() {
            let text = "Ваш результат: \(correctAnswers) из 10"
            let viewModel = QuizResultsViewModel(title: "Этот раунд окончен!",
                                                 text: text,
                                                 buttonText: "Сыграть ещё раз")
            statisticService.store(correct: correctAnswers, total: questionsAmount)
            viewController?.show(quiz: viewModel)
        } else {
            switchToNextQuestion()
...
